# Lisla

./: .gitignore  TODO.md
data/: .litllconfig.litll
data/idl/lib/: .idllib.litll  core.type.lisla  standard.library.lisla
data/idl/std/: .idlconfig.litll  .litllconfig.litll  formula.idl.litll  lisla.library.lisla  litll.library.litll
data/script/: sample.ast.lisla  sample.script.lisla
data/sora_idl/sora/: document.idl.sora  idl.idl.sora  module.idl.sora  standard.idl.sora  std.idl.sora
data/test_case/: README.md
data/test_case/arraytree/: README.md
data/test_case/basic/: 0000_unquoted_string.litll  0000_unquoted_string.sora  0001_quoted_string.litll  1000.litll  (+48 more)
document/ja/: index.md
impl/rust/lisla_lang/: Cargo.toml
impl/rust/lisla_lang/src/: lib.rs  macros.rs
impl/rust/lisla_lang/src/from/: error.rs  mod.rs
impl/rust/lisla_lang/src/leaf/: mod.rs
impl/rust/lisla_lang/src/parse/: array.rs  error.rs  mod.rs  quote.rs  space.rs  string.rs
impl/rust/lisla_lang/src/tag/: mod.rs
impl/rust/lisla_lang/src/template/: error.rs  mod.rs
impl/rust/lisla_lang/src/tree/: leaf.rs  mod.rs
impl/rust/lisla_lang/tests/: lib.rs
impl/rust/lisla_lang/tests/macros/: mod.rs
impl/rust/lisla_lang/tests/parse/: mod.rs
impl/rust/lisla_type/: Cargo.toml  README.md
impl/rust/lisla_type/src/: lib.rs
impl/rust/lisla_type/src/error/: mod.rs
impl/rust/lisla_type/src/types/: core.rs  mod.rs
impl/rust/lisla_type/src/types/lisla/: _type.rs  mod.rs
spec/schora/: README.md  schora_for_schora.sc.sora  std.sc.sora
spec/sora/: README.md
spec/sora_dsl/: spec.md
(+1722 files in other folders)
