[package]
name = "arraytree_type"
version = "0.1.0"
authors = ["shohei909 <909mmsphere@gmail.com>"]

[dependencies]
arraytree_derive = { version = "0.1.0", path = "../arraytree_derive" }
arraytree_type_derive = { version = "0.1.0", path = "../arraytree_type_derive" }
arraytree_lang = { version = "0.1.0", path = "../arraytree_lang" }
arraytree_core = { version = "0.1.0", path = "../arraytree_core" }

[dev-dependencies]
serde="1.0.11"
serde_json="1.0.2"
